--- a/project-wac-s2a202/bin/main/templates/zip/input.html
+++ b/project-wac-s2a202/bin/main/templates/zip/input.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </main>
-    <footer>&copy; 2024 WebPortal.com</footer>
+    <footer>&copy; 2025 WebPortal.&copyom</footer>
   </body>
 </html>
