result.html を更新

--- a/project-wac-s2a202/bin/main/templates/zip/result.html
+++ b/project-wac-s2a202/bin/main/templates/zip/result.html
@@ -63,6 +63,6 @@
     </div>
       <!-- .card -->
     </main>
-    <footer>&copy; 2024 WebPortal.com</footer>
+    <footer>&copy; 2025 WebPortal.&copyom</footer>
   </body>
 </html>
